# function

./: CMakeLists.txt  average.cpp  average.hpp  average_d.cpp  order.cpp  order.hpp  order_d.cpp  pay.cpp  pay.hpp  pay_d.cpp
